[package]
name = "gm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
spinners-rs = "2.3.0"
ansi_term = "0.12.1"
lazy_static = "1.4.0"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.20.1", features = ["full"] }
serde = "1.0.140"
serde_derive = "1.0.140"
serde_json = "1.0.82"
home = "0.5.3"

[[bin]]
name = "gm"
path = "src/gm.rs"
doc = false