[package]
name = "gm"
version = "0.1.1"
edition = "2021"
resolver = "2"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
spinners-rs = "2.3.0"
yansi = "0.5.1"
lazy_static = "1.4.0"
tokio = { version = "1.35.1", features = ["full"] }
reqwest = "0.11.23"
serde = "1.0.194"
serde_derive = "1.0.194"
serde_json = "1.0.110"
home = "0.5.9"
anyhow = "1.0.79"

[[bin]]
name = "gm"
path = "src/gm.rs"
doc = false

